[package]
name = "lav_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.19.4"
winit = "0.27.5"
bytemuck = "1.12.3"
wgpu = { version = "0.16.0", features = ["spirv"] }
pollster = "0.3.0"
